css/style.css
body {
  font: Helvetica, Arial, sans-serif;
}

.em-text {
	color: #311195 !important;
}

.jumbotron {
	background: url(../img/site_showcase_bg.jpg);
	background-repeat: no-repeat;
	background-position: top center;
	color: #fff;
	height: 500px;
	overflow: none;
	position: relative;
}

.jumbotron h1 {
	margin-top: 60px;
}

.jumbotron p {
	margin-bottom: 40px;
}

.jumbotron img.app-btn {
	width: 40%;
	margin-right: 30px;
}

.jumbotron img.showcase-img {
	width: 58.5%;
}

i.glyphicon {
	padding-right: 10px;
}

section#title-bar {
	background-color: #311195;
	color: #fff;
	height: 80px;
	padding: 0;
	margin: 0;
}

section#title-bar h1 {
	margin-bottom: 20px;
}

section#about {
	padding: 20px 0 20px 0;
}

form {
	padding-top: 20px;
}

section#contact {
	padding: 20px 0 20px 0;
}

footer {
	background-color: #333;
	color: #fff;
	padding: 30px 0 20px 0;
}

footer li {
	float: left;
	list-style: none;
	padding: 0 10px 0 10px;
}

footer a {
	color: #fff;
	text-decoration: none;
}

footer p {
	float: right;
}

/* Media queries*/

@media(min-width: 1200px){       /*Large*/
	img.showcase-img {
		width: 58.5% !important;
		top: 0 !important;
	}
}

@media(min-width: 1001px){       /*Medium large*/
	img.showcase-img {
		top: 77px;
	}
}

@media(max-width: 1000px){       /*Medium*/
	img.app-btn {
		width: 30% !important;
	}
}

@media(max-width: 768px){          /*Medium Small*/
	img.app-btn {
		width: 30% !important;
	}
	.jumbotron {
		padding-left: 30px !important;
		padding-right: 50px !important;
		height: 400px;
	}
}

@media(max-width: 722px){         /*Small*/
	img.app-btn {
		width: 40% !important;
	}
}

@media(max-width: 615px){         /*Tiny*/
	img.app-btn {
		width: 45% !important;
		padding: 10pxx;
	}
}

